2006-06-28  Per Bothner  <per@bothner.com>

	* Namespace.java (prefix): New field.
	(getInstance): Name is interned.
	(make): New factory method.
	(<init>(String, int)): Remove constructor.
	(writeExternal, readExternal): Write/read prefix,  Intern name.
	(readResolve): Take prefix into account, if givem.
	* Symbol.java: Optionally extend javax.xml.namespace.QName.
	However, this is not fully working or recommended.
	A few methods to be compatible with QName, including getPrefix.
	(make, makeUninterned): New factory methods.
	(equals): New static method.
	(equals): Use new method.
	(toString): If available, emit prefix rather than uri.
	* ThreadLocation.java (<init>): Use new Symbol.makeUninterned.

2006-06-16  Per Bothner  <per@bothner.com>

	* HasNamedParts.java (isConstant): New method.
	* Namespace.java (isConstant): New method.

	* IndirectableLocation.java (getBaseForce): New method.

2006-06-10  Per Bothner  <per@bothner.com>

	* Namespace.java  (nsTable): Make protected.

	* HasNamedParts.java: New interface.
	* Makefile.am: Update accordingly.
	* Namespace.java: Implement HasNamedParts.
	(get): New method.

2006-06-09  Per Bothner  <per@bothner.com>

	* PropertySet.java: New class, implements Named.
	(properties, nameKey, getName, getSymbol, setSymbol, setName,
	getProperty, setProperty, removeProperty): Move fields and methods
	from Procedure to here.
	* Procedure.java: Change to extends PropertySet.  Remove moved methods.
	(name): Remove deprecated method.
	* Environment.java: Extend PropertySet, rather than NameMap
	and thence indirectly Procedure.
	(getChecked): New method, moved from NameMap.
	* NameMap.java: Remove no-longer-needed class.
	* Makefile.am: Update accordingly.

2006-05-20  Per Bothner  <per@bothner.com>

	* InheritingEnvironment.java (lookup): Explictly check isBound.
	(getLocation): Likewise.

2006-05-02  Per Bothner  <per@bothner.com>

	* UnboundLocationException.java (filename, line, column): New fields.
	(<init>): New constructor.